[package]
name = "wireshark-kafka"
version = "0.1.0"
authors = ["Vadim Chekan <kot.begemot@gmail.com>"]
edition = "2018"
description = "Kafka dissector plugin for Wireshark"
keywords = ["wireshark", "kafka", "network analyzer"]

[lib]
name = "kafka_plugin"
crate-type = ["cdylib"]

[profile.release]
# shrink .so size
lto = true
panic = 'abort'

[dependencies]
wireshark_ffi = {path = "./wireshark-ffi"}
